////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//
// © 2011-2021 Telenav, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

package com.telenav.kivakit.math.statistics;

import com.telenav.kivakit.core.kernel.language.time.Duration;
import com.telenav.lexakai.annotations.LexakaiJavadoc;

/**
 * Computes an average duration for a succession of samples.
 *
 * @author jonathanl (shibo)
 */
@LexakaiJavadoc(complete = true)
public class AverageDuration extends Average
{
    public void add(final Duration duration)
    {
        super.add(duration.asMilliseconds());
    }

    public Duration averageDuration()
    {
        return Duration.milliseconds(average());
    }
}
