@startuml

    !include ../lexakai/lexakai.theme
    
    title "com.telenav.kivakit.math.statistics"
    
    interface Resettable
    
    Resettable <|-- Average
    class Average
    {
        --
        +double average()
        +int samples()
        +double total()
        --(math)--
        +void add(double value)
        +void add(Average that)
        +double maximum()
        +double minimum()
    }
    
    Average <|-- AverageDuration
    class AverageDuration
    {
        --(collection)--
        +void add(Duration)
        --(time)--
        +Duration averageDuration()
    }
    
    Average <|-- StandardDeviation
    class StandardDeviation
    {
        --(constructors)--
        +StandardDeviation()
        --
        +double standardDeviation()
    }
    
    class SuccessRate
    {
        --
        +void attempt()
        --(status)--
        +void success()
        +Percent successRate()
    }
    
@enduml

